Finished the bottom half of the home page design

--- a/src/modules/Social follow.module/module.html
+++ b/src/modules/Social follow.module/module.html
@@ -5,7 +5,7 @@
     {% set href = "mailto:" + href %}
   {% endif %}
   <a href="{{ href }}"
-      class="social-links__icon"
+      class="social-links-icon"
      {% if item.link.open_in_new_tab %}target="_blank"{% endif %}
      {% if item.link.no_follow %}rel="nofollow"{% endif %}
      >
