--- a/src/modules/Blog Tag Filter.module/module.html
+++ b/src/modules/Blog Tag Filter.module/module.html
@@ -4,11 +4,11 @@
   <span class="blog-tag-filter__title">Browse by</span>
   <div class="blog-tag-filter__dropdown">
     <select>
+      <option selected="selected" value="{{ group.absolute_url }}">All</option>
     {% for item in my_tags %}
-      <option value="{{ item.slug }}">{{ item }}</option>
+      <option value="{{ blog_tag_url(group.id, item.slug) }}">{{ item }}</option>
     {% endfor %}
     </select>
   </div>
 </div>
-
 
