--- a/src/modules/Blog Post Banner.module/module.html
+++ b/src/modules/Blog Post Banner.module/module.html
@@ -1,14 +1,5 @@
-<div class="blog-header" style="background-image: url('{{ module.background_image.src }}');">
-  <div class="blog-header__inner">
-    {% if module.blog_title %}
-      <h1 class="blog-header__title">{{ module.blog_title }}</h1>
-    {% else %}
-      <h1 class="blog-header__title">{{ group.public_title }}</h1>
-    {% endif %}
-    {% if module.blog_subtitle %}
-      <h4 class="blog-header__subtitle">{{ module.blog_subtitle }}</h4>
-    {% else %}
-      <h4 class="blog-header__subtitle">{{ group.description }}</h4>
-    {% endif %}
+<div class="blog-post-header" style="background-image: url('{{ module.background_image.src }}');">
+  <div class="blog--post-header__inner">
+    <a href="{{ group.absolute_url }}">{% icon name="chevron-left" style="SOLID", width="13", no_wrapper=True %} Back to Blog</a>
   </div>
 </div>
