--- a/src/modules/Pricing Table.module/module.html
+++ b/src/modules/Pricing Table.module/module.html
@@ -1,41 +1,91 @@
-<div class="pricing-table">
+<div class="pricing-table" id="{{ name }}">
 
     {# Pricing Filters #}
     <div class="billing-selectors">
-        <div class="billing-selectors__pricing-option billing-selectors__pricing-option--left"><input id="monthly" type="radio" name="pricing-select" checked><label for="monthly">{{ module.opt_1.billTitleOne }}</label></div>
-        <div class="billing-selectors__pricing-option billing-selectors__pricing-option--right"><input id="annual" type="radio" name="pricing-select"><label for="annual">{{ module.opt_2.billTitleTwo }}</label></div>
+        <div class="billing-selectors__pricing-option billing-selectors__pricing-option--left"><input id="monthly" type="radio" name="pricing-select" checked><label for="monthly">{{ module.option_one.billing_option_one_title }}</label></div>
+        <div class="billing-selectors__pricing-option billing-selectors__pricing-option--right"><input id="annual" type="radio" name="pricing-select"><label for="annual">{{ module.option_two.billing_option_two_title }}</label></div>
     </div>
 
     {# Pricing Table Blocks #}
     <div class="pricing-block-section">
 
         {# Monthly Block #}   
-        {% for month in module.opt_1.monthTable %} 
-            <div class="price-block price-block--monthly">
+        {% for option in module.option_one.option_one_table %} 
+            <div class="price-block price-block--monthly price-block--{{ loop.length }}">
                 <div class="price-block__header">
-                    <div class="price-block__title">{{ month.monthTitle }}</div>
-                    <div class="price-block__price">${{ month.monthPrice }}</div>
-                    <div class="price-block__cta">{% cta guid='{{ month.monthCTA }}' %}</div>
+                    <div class="price-block__title">{{ option.option_one_title }}</div>
+                    <div class="price-block__price">
+                        <div class="price-block__currency">{{ option.option_one_currency }}</div>
+                        <div class="price-block__number">{{ option.option_one_price }}</div>
+                    </div>
                 </div>
                 <div class="price-block__description-block">
-                    <div class="price-block__description">{{ month.monthDescription }}</div>
+                    <div class="price-block__description">{{ option.option_one_description }}</div>
+                    <div class="price-block__cta">
+                        {% if option.option_one_button_link.url.type is equalto "EMAIL_ADDRESS" %}
+                            {% set href = "mailto:" ~ option.option_one_button_link.url.href %}
+                        {% else %}
+                            {% unless (option.option_one_button_link.url.href is string_containing "//") or !option.option_one_button_link.url.href %}
+                                {% set href = "//" ~ option.option_one_button_link.url.href %}
+                            {% else %}
+                                {% set href = option.option_one_button_link.url.href || "" %}
+                            {% endunless %}
+                        {% endif %}
+                        {% set rel = (option.option_one_button_link.open_in_new_tab ? "noopener " : null) ~ (option.option_one_button_link.no_follow ? "nofollow" : null) %}
+                        <a class="hs-button price-blog__cta" href="{{ href }}"
+                        {% if option.option_one_button_link.open_in_new_tab %}target="_blank"{% endif %}
+                        rel ="{{ rel }}">
+                        {{ option.option_one_button_text }}
+                        </a>
+                    </div>
                 </div>   
             </div>
         {% endfor %}
         
         {# Yearly Block #}
-        {% for year in module.opt_2.yearTable %}
-            <div class="price-block price-block--annual">
+        {% for option in module.option_two.option_two_table %}
+            <div class="price-block price-block--annual price-block--{{ loop.length }}">
                 <div class="price-block__header">
-                    <div class="price-block__title">{{ year.yearTitle }}</div>
-                    <div class="price-block__price">${{ year.yearPrice }}</div>
-                    <div class="price-block__cta">{% cta guid='{{ year.yearCTA }}' %}</div>
+                    <div class="price-block__title">{{ option.option_two_title }}</div>
+                    <div class="price-block__price">
+                        <div class="price-block__currency">{{ option.option_two_currency }}</div>
+                        <div class="price-block__number">{{ option.option_two_price }}</div>
+                    </div>
                 </div>
                 <div class="price-block__description-block">
-                    <div class="price-block__description">{{ year.yearDescription }}</div>
+                    <div class="price-block__description">{{ option.option_two_description }}</div>
+                    <div class="price-block__cta">
+                        {% if option.option_two_button_link.url.type is equalto "EMAIL_ADDRESS" %}
+                            {% set href = "mailto:" ~ option.option_two_button_link.url.href %}
+                        {% else %}
+                            {% unless (option.option_two_button_link.url.href is string_containing "//") or !option.option_two_button_link.url.href %}
+                                {% set href = "//" ~ option.option_two_button_link.url.href %}
+                            {% else %}
+                                {% set href = option.option_two_button_link.url.href || "" %}
+                            {% endunless %}
+                        {% endif %}
+                        {% set rel = (option.option_two_button_link.open_in_new_tab ? "noopener " : null) ~ (option.option_two_button_link.no_follow ? "nofollow" : null) %}
+                        <a class="hs-button" href="{{ href }}"
+                        {% if option.option_two_button_link.open_in_new_tab %}target="_blank"{% endif %}
+                        rel ="{{ rel }}">
+                        {{ option.option_two_button_text }}
+                        </a>
+                    </div>
                 </div>
             </div> 
         {% endfor %}
 
     </div>
 </div>
+
+{% require_css %}
+<style>
+    #hs_cos_wrapper_{{name}} .price-block__header {
+        background-color: {{ module.price_table_header_bg_color.color }}; 
+        color: {{ module.price_table_header_color.color }};
+    }
+    #hs_cos_wrapper_{{name}} .billing-selectors__pricing-option input[type="radio"]:checked + label:before {
+        border: 6px solid {{ module.price_table_header_bg_color.color }};
+    }
+</style>
+{% end_require_css %}
