--- a/src/modules/Testimonial.module/module.html
+++ b/src/modules/Testimonial.module/module.html
@@ -1,10 +1,10 @@
 <div class="testimonial">
-  <h3 class="title">{{ module.testimonial_title }}</h3>
-  <div class="description">
+  <h3 class="testimonial__title">{{ module.testimonial_title }}</h3>
+  <div class="testimonial__description">
     {{ module.testimonial_description }}
   </div>
-  <div class="avatar" style="background-image: url('{{ module.testimonial_headshot.src }}')"></div>
-  <div class="name">
+  <div class="testimonial__avatar" style="background-image: url('{{ module.testimonial_headshot.src }}')"></div>
+  <div class="testimonial__name">
     {{ module.testimonial_name }}
   </div>
 </div>
