--- a/src/modules/Pricing Table.module/module.html
+++ b/src/modules/Pricing Table.module/module.html
@@ -32,7 +32,7 @@
                             {% endunless %}
                         {% endif %}
                         {% set rel = (option.option_one_button_link.open_in_new_tab ? "noopener " : null) ~ (option.option_one_button_link.no_follow ? "nofollow" : null) %}
-                        <a class="hs-button price-blog__cta" href="{{ href }}"
+                        <a class="button button__primary price-blog__cta" href="{{ href }}"
                         {% if option.option_one_button_link.open_in_new_tab %}target="_blank"{% endif %}
                         rel ="{{ rel }}">
                         {{ option.option_one_button_text }}
@@ -65,7 +65,7 @@
                             {% endunless %}
                         {% endif %}
                         {% set rel = (option.option_two_button_link.open_in_new_tab ? "noopener " : null) ~ (option.option_two_button_link.no_follow ? "nofollow" : null) %}
-                        <a class="hs-button" href="{{ href }}"
+                        <a class="button button__primary" href="{{ href }}"
                         {% if option.option_two_button_link.open_in_new_tab %}target="_blank"{% endif %}
                         rel ="{{ rel }}">
                         {{ option.option_two_button_text }}
