--- a/src/modules/Blog Related Posts.module/module.html
+++ b/src/modules/Blog Related Posts.module/module.html
@@ -12,17 +12,21 @@
           <span class="blog-card__date">{{ post.publish_date_localized }}</span>
       </div>
   </div>
-  {% if post.featured_image %}
-    <a class="blog-card__image" style="background-image: url('{{ post.featured_image }}')"; href="{{ post.absolute_url }}"></a>
-  {% endif %}
-  <div class="blog-card__content">
-      <div class="blog-card__tags">
-          {% icon name="tag" style="SOLID" %}
-          {% for tag in post.tag_list %}
-            <a class="blog-card__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
-          {% endfor %}
+  <div class="blog-card__body">
+      {% if post.featured_image %}
+        <a class="blog-card__image" style="background-image: url('{{ post.featured_image }}')"; href="{{ post.absolute_url }}"></a>
+      {% endif %}
+      <div class="blog-card__content">
+        <div class="blog-card__tags">
+            {% icon name="tag" style="SOLID" %}
+            {% for tag in post.tag_list %}
+              <a class="blog-card__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
+            {% endfor %}
+        </div>
+        {{ post.post_list_content|truncatehtml(170) }}
       </div>
-      {{ post.post_list_content|truncatehtml(170) }}
+    </div>
+    <div class="blog-card__footer">
       <a class="blog-card__button button button__primary" href="{{ post.absolute_url }}">Read More</a>
       <div class="blog-card__comment-count">
           {% set comments_number =  post.comment_list|length %}
