--- a/src/modules/Feature.module/module.html
+++ b/src/modules/Feature.module/module.html
@@ -15,9 +15,21 @@
   #hs_cos_wrapper_{{name}} .feature__icon > span {
     background-color: {{ module.icon_bg_color.color }}; 
     border-color: {{ module.icon_border_color.color }}; 
+    -webkit-transition: all .15s linear;
+    -o-transition: all .15s linear;
+    transition: all .15s linear;
   }
   #hs_cos_wrapper_{{name}} .feature__icon svg {
     fill: {{ module.icon_color.color }}; 
+    -webkit-transition: all .15s linear;
+    -o-transition: all .15s linear;
+    transition: all .15s linear;
+  }
+  #hs_cos_wrapper_{{name}} .feature__icon > span:hover {
+    background-color: {{ module.icon_color.color }}; 
+  }
+  #hs_cos_wrapper_{{name}} .feature__icon > span:hover svg {
+    fill: {{ module.icon_bg_color.color }};; 
   }
 </style>
 {% end_require_css %}
