Adding in blog theme settings

--- a/src/modules/Blog CTA.module/module.html
+++ b/src/modules/Blog CTA.module/module.html
@@ -1,4 +1,4 @@
-<div class="blog-cta" style="background-color: {{ module.background_color.color }};">
+<div class="blog-cta">
   <div class="content-wrapper">
     <div class="row-fluid span12">
       <div class="column span3">
