--- a/src/modules/CTA Banner.module/module.html
+++ b/src/modules/CTA Banner.module/module.html
@@ -1,4 +1,4 @@
-<div class="blog-cta" style="background-color: {{ module.background_color.color }};">
+<div class="cta-banner" style="background-color: {{ module.background_color.color }};">
   <div class="content-wrapper">
     <div class="row-fluid span12">
       <div class="column span3">
@@ -9,14 +9,14 @@
           {% elif module.image.size_type == 'auto_custom_max' %}
             {% set sizeAttrs = 'width="100%" height="auto" style="max-width: {{ module.image.max_width }}px; max-height: {{ module.image.max_height }}px"' %}
           {% endif %}
-          <img class="blog-cta__image" src="{{ module.image.src }}" alt="{{ module.image.alt }}" {{ sizeAttrs }}>
+          <img class="cta-banner__image" src="{{ module.image.src }}" alt="{{ module.image.alt }}" {{ sizeAttrs }}>
         {% endif %}
       </div>
-      <div class="blog-cta__content column span6">
+      <div class="cta-banner__content column span6">
         {{ module.content }}
       </div>
-      <div class="blog-cta__cta column span3">
-        {% cta guid="{{ module.cta_field }}" %}
+      <div class="cta-banner__cta column span3">
+        {% cta guid="{{ module.cta_field }}" %} 
       </div>
     </div>
   </div>
