--- a/src/modules/CTA Banner.module/module.html
+++ b/src/modules/CTA Banner.module/module.html
@@ -1,24 +1,22 @@
-<div class="cta-banner" style="background-color: {{ module.background_color.color }};">
+<div class="cta-banner">
   <div class="content-wrapper">
-    <div class="row-fluid span12">
-      <div class="column span3">
-        {% if module.image.src %}
-          {% set sizeAttrs = 'width="{{ module.image.width }}" height="{{ module.image.height }}"' %}
-          {% if module.image.size_type == 'auto' %}
-            {% set sizeAttrs = 'style="max-width: 100%; height: auto;"' %}
-          {% elif module.image.size_type == 'auto_custom_max' %}
-            {% set sizeAttrs = 'width="100%" height="auto" style="max-width: {{ module.image.max_width }}px; max-height: {{ module.image.max_height }}px"' %}
-          {% endif %}
-          <img class="cta-banner__image" src="{{ module.image.src }}" alt="{{ module.image.alt }}" {{ sizeAttrs }}>
+    <div class="cta-banner__wrapper">
+      <div class="cta-banner__image-column">
+      {% if module.image.src %}
+        {% set sizeAttrs = 'width="{{ module.image.width }}" height="{{ module.image.height }}"' %}
+        {% if module.image.size_type == 'auto' %}
+          {% set sizeAttrs = 'style="max-width: 100%; height: auto;"' %}
+        {% elif module.image.size_type == 'auto_custom_max' %}
+          {% set sizeAttrs = 'width="100%" height="auto" style="max-width: {{ module.image.max_width }}px; max-height: {{ module.image.max_height }}px"' %}
         {% endif %}
-        <img class="blog-cta__image" src="{{ module.image.src }}" alt="{{ module.image.alt }}" {{ sizeAttrs }}>
+        <img class="cta-banner__image" src="{{ module.image.src }}" alt="{{ module.image.alt }}" {{ sizeAttrs }}>
       {% endif %}
       </div>
-      <div class="cta-banner__content column span6">
+      <div class="cta-banner__content-column">
         {{ module.content }}
       </div>
-      <div class="cta-banner__cta column span3">
-        {% cta guid="{{ module.cta_field }}" %} 
+      <div class="cta-banner__button-column">
+        {% cta guid="{{ module.cta_field }}" %}
       </div>
     </div>
   </div>
