Making minor changes to pillar page

--- a/src/modules/Pillar Menu.module/module.html
+++ b/src/modules/Pillar Menu.module/module.html
@@ -1,6 +1,8 @@
 <div class="pillar-navigation">
-  <h2>
+  <h2 class="pillar-navigation__title">
     {{ module.pillar_title }}
   </h2>
-  <ul id="pillar-navigation__menu" class="pillar-navigation__menu"></ul>
+  <nav class="pillar-navigation__menu">
+    <ul id="pillar-navigation__menu-items" class="pillar-navigation__menu-items"></ul>
+  </nav>
 </div>
