--- a/src/modules/Pillar Section Title.module/module.html
+++ b/src/modules/Pillar Section Title.module/module.html
@@ -1,19 +1,20 @@
-{% set section_title_clean = module.section_title|lower|regex_replace("[^a-zA-Z]", "")%}
+{% set section_anchor = module.section_title|lower|regex_replace("[^a-zA-Z]", "")%}
 
-<section class="pillar-section" id="{{ sectionId }}{{ name }}">
-  <div style="text-align: center; margin-top: 5em; margin-bottom: 3em;">
-    <h2 class="pillar-section__title" style="text-align: center; font-size: 2em;">{{ module.section_title }}</h2>
-  </div>
-</section>
+<div class="pillar-section-title" id="{{ section_anchor }}">
+  <h2 class="pillar-section-title__header">{{ module.section_title }}</h2>
+</div>
 
-{# Append a unique ID to the pillar navigation #}
+{# Appends a navigation item to the pillar menu #}
 {% require_js %}
-<script>
-(function() {
-  var navMenu = document.getElementById('pillar-navigation__menu'),
-    elchild = document.createElement('li');
-      elchild.innerHTML = '<a href="#{{ sectionId }}{{ name }}"><span class="tab">{{ module.section_title|escape }}</span></a>';
-  navMenu.appendChild(elchild);
-})();
-</script>
+  <script>
+    (function() {
+      var navMenu = document.getElementById("pillar-navigation__menu-items");
+      if (navMenu) {
+        var navChild = document.createElement("li");
+        navChild.className = "pillar-navigation__menu-item";
+        navChild.innerHTML = '<a href="#{{ section_anchor }}">{{ module.section_title|escape }}</a>';
+        navMenu.appendChild(navChild);
+      }
+    })();
+  </script>
 {% end_require_js %}
