Adding fallback color for blog post banner

--- a/src/modules/Blog Post Banner.module/module.html
+++ b/src/modules/Blog Post Banner.module/module.html
@@ -1,12 +1,14 @@
-{% macro banner_image()  %}
-  {% if module.banner_image_select == "featured_image" %}
-    {{ content.post_list_summary_featured_image }}
+{% macro banner_image() -%}
+  {% if module.banner_image_select == "featured_image" and content.featured_image %}
+    background-image: url('{{ content.featured_image }}');
   {% elif module.banner_image_select == "custom_image" %}
-    {{ module.background_image.src }}
+    background-image: url('{{ module.background_image.src }}');
+  {% else %}
+    background-color: #ccc;
   {% endif %}
-{% endmacro %}
+{%- endmacro %}
 
-<div class="blog-post-header" style="background-image: url('{{ banner_image()|trim }}');">
+<div class="blog-post-header" style="{{ banner_image()|trim }};">
   <div class="blog-post-header__inner">
     <div class="blog-post-header__back-button">
       <a href="{{ group.absolute_url }}">{% icon name="chevron-left" style="SOLID", width="13", no_wrapper=True %} Back to Blog</a>
