Cleaning up button icon and id

--- a/src/modules/Button.module/module.html
+++ b/src/modules/Button.module/module.html
@@ -10,7 +10,7 @@
 
 {% set rel = (module.button_link.open_in_new_tab ? "noopener " : null) ~ (module.button_link.no_follow ? "nofollow" : null) %}
 <a class="button button__primary" href="{{ href }}"
-    id="hs-button_{{ name }}"
+    id="button_{{ name }}"
     {% if module.button_link.open_in_new_tab %}target="_blank"{% endif %}
     rel="{{ rel }}">
   {{ module.button_text }}
@@ -18,7 +18,7 @@
 
 {% if module.style.override_default_style %}
 <style>
-  #hs-button_{{ name }} {
+  #button_{{ name }} {
     background-color: rgba({{ module.style.button_bg_color.color|convert_rgb }},{{ module.style.button_bg_color.opacity }});
     border-color: rgba({{ module.style.button_border_color.color|convert_rgb }},{{ module.style.button_border_color.opacity }});
     border-radius: {{ module.style.button_corner_radius }}px;
@@ -29,7 +29,7 @@
     padding-top: {{ module.style.button_vertical_padding }}px;
     padding-bottom: {{ module.style.button_vertical_padding }}px;
   }
-  #hs-button_{{ name }}:hover {
+  #button_{{ name }}:hover {
     border-color: rgba({{ module.style.button_border_hover_color .color|convert_rgb }},{{ module.style.button_border_hover_color .opacity }});
     background-color: rgba({{ module.style.button_bg_hover_color.color|convert_rgb }},{{ module.style.button_bg_hover_color.opacity }});
     color: rgba({{ module.style.button_text_hover_color.color|convert_rgb }},{{ module.style.button_text_hover_color.opacity }});"
