--- a/src/modules/Pillar Menu.module/module.html
+++ b/src/modules/Pillar Menu.module/module.html
@@ -1,8 +1,19 @@
-<div class="pillar-navigation">
+<div class="pillar-navigation" id="pillar-navigation_{{ name }}">
   <h2 class="pillar-navigation__title">
-    {{ module.pillar_title }}
+    {{ module.pillar_menu_title }}
   </h2>
   <nav class="pillar-navigation__menu">
     <ul id="pillar-navigation__menu-items" class="pillar-navigation__menu-items"></ul>
   </nav>
 </div>
+
+{% if module.style.override_default_style %}
+<style>
+  #pillar-navigation_{{ name }} .pillar-navigation__menu {
+    border-color: rgba({{ module.style.pillar_menu_border_color.color|convert_rgb }},{{ module.style.pillar_menu_border_color.opacity }});
+  }
+  #pillar-navigation_{{ name }} .pillar-navigation__menu-item {
+    border-color: rgba({{ module.style.pillar_menu_border_color.color|convert_rgb }},{{ module.style.pillar_menu_border_color.opacity }});
+  }
+</style>
+{% endif %}
