Cleaning up minor mistakes in a few modules

--- a/src/modules/Blog Post Banner.module/module.html
+++ b/src/modules/Blog Post Banner.module/module.html
@@ -2,9 +2,9 @@
   {% if module.banner_image_select == "featured_image" and content.featured_image %}
     background-image: url('{{ content.featured_image }}');
   {% elif module.banner_image_select == "custom_image" %}
-    background-image: url('{{ module.custom_background_image.src }}');
+    background-image: url('{{ module.custom_bg_image.src }}');
   {% else %}
-    background-color: #ccc;
+    background-color: #CCCCCC;
   {% endif %}
 {%- endmacro %}
 
