Updating testimonial module

--- a/src/modules/Call to Action Banner.module/module.html
+++ b/src/modules/Call to Action Banner.module/module.html
@@ -26,7 +26,7 @@
     background-color: rgba({{ module.style.cta_bg_color.color|convert_rgb }},{{ module.style.cta_bg_color.opacity }});
   }
   #cta-banner_{{ name }} .cta-banner__content-column * {
-    color: rgba({{ module.style.cta_text_color.color|convert_rgb }},{{ module.style.cta_text_color.opacity }});"
+    color: rgba({{ module.style.cta_text_color.color|convert_rgb }},{{ module.style.cta_text_color.opacity }});
   }
 </style>
 {% endif %}
