--- a/src/modules/Testimonial.module/module.html
+++ b/src/modules/Testimonial.module/module.html
@@ -1,4 +1,4 @@
-<div class="testimonial" id="{{ name }}">
+<section class="testimonial" id="testimonial_{{ name }}">
   <h3 class="testimonial__title">{{ module.testimonial_title }}</h3>
   <div class="testimonial__description">
     {{ module.testimonial_description }}
@@ -7,12 +7,14 @@
   <div class="testimonial__name">
     {{ module.testimonial_name }}
   </div>
-</div>
+</section>
 
-{% require_css %}
-<style>
-#hs_cos_wrapper_{{name}} .testimonial:hover {
-  border-bottom: 15px solid {{ module.testimonial_hover_accent_color.color }};
-}
-</style>
-{% end_require_css %}
+{% if module.style.override_default_style %}
+  {% require_css %}
+    <style>
+      #testimonial_{{ name }}:hover {
+        border-color: rgba({{ module.style.testimonial_hover_accent_color.color|convert_rgb }},{{ module.style.testimonial_hover_accent_color.opacity }});
+      }
+    </style>
+  {% end_require_css %}
+{% endif %}
