--- a/src/modules/Accordion.module/module.html
+++ b/src/modules/Accordion.module/module.html
@@ -1,8 +1,8 @@
-<div class="accordion" id="{{ name }}" {% if module.max_1_open %}data-sync="true"{% endif %}>
+<div class="accordion" id="accordion_{{ name }}" {% if module.max_1_open %}data-sync="true"{% endif %}>
   {% for accordion in module.accordion %}
     <div class="accordion__item" aria-expanded="{% if accordion.open_by_default %}true{% endif %}">
       <button>
-        {{accordion.accordion_header}}
+        {{ accordion.accordion_header }}
         <span class="accordion__icon"></span>
       </button>
       <main>
@@ -16,23 +16,22 @@
 
 {% require_css %}
 <style>
-  #hs_cos_wrapper_{{name}} .accordion__item button {
-    color: {{ module.faq_color.color }};
+  #accordion_{{name}} .accordion__item button {
+    color: rgba({{ module.style.faq_color.color|convert_rgb }},{{ module.style.faq_color.opacity }});
   }
-  #hs_cos_wrapper_{{name}} .accordion__icon {
-    background-color: {{ module.faq_color.color }}; 
+  #accordion_{{name}} .accordion__icon {
+    background-color: rgba({{ module.style.faq_color.color|convert_rgb }},{{ module.style.faq_color.opacity }});
   }
-  #hs_cos_wrapper_{{name}} .accordion__icon:before,
-  #hs_cos_wrapper_{{name}} .accordion__icon:after {
-    background-color: {{ module.faq_icon_color.color }}; 
+  #accordion_{{name}} .accordion__icon:before,
+  #accordion_{{name}} .accordion__icon:after {
+    background-color: rgba({{ module.style.faq_icon_color.color|convert_rgb }},{{ module.style.faq_icon_color.opacity }});
   }
-  #hs_cos_wrapper_{{name}} .accordion__item[aria-expanded=true] .accordion__icon:before,
-  #hs_cos_wrapper_{{name}} .accordion__item[aria-expanded=true] .accordion__icon:after {
-    background-color: {{ module.faq_icon_open_color.color }}; 
+  #accordion_{{name}} .accordion__item[aria-expanded=true] .accordion__icon:before,
+  #accordion_{{name}} .accordion__item[aria-expanded=true] .accordion__icon:after {
+    background-color: rgba({{ module.style.faq_icon_open_color.color|convert_rgb }},{{ module.style.faq_icon_open_color.opacity }});
   }
-  #hs_cos_wrapper_{{name}} .accordion__item[aria-expanded=true] .accordion__icon { 
-    background-color: {{ module.faq_open_color.color }}; 
+  #accordion_{{name}} .accordion__item[aria-expanded=true] .accordion__icon {
+    background-color: rgba({{ module.style.faq_open_color.color|convert_rgb }},{{ module.style.faq_open_color.opacity }});
   }
 </style>
 {% end_require_css %}
-
