--- a/src/modules/Testimonial.module/module.html
+++ b/src/modules/Testimonial.module/module.html
@@ -3,18 +3,18 @@
   <div class="testimonial__description">
     {{ module.testimonial_description }}
   </div>
-  <div class="testimonial__avatar" style="background-image: url('{{ module.testimonial_headshot.src }}')"></div>
+  <div class="testimonial__avatar" style="background-image: url('{{ module.testimonial_image.src }}')"></div>
   <div class="testimonial__name">
     {{ module.testimonial_name }}
   </div>
 </section>
 
 {% if module.style.override_default_style %}
-  {% require_css %}
-    <style>
-      #testimonial_{{ name }}:hover {
-        border-color: rgba({{ module.style.testimonial_hover_accent_color.color|convert_rgb }},{{ module.style.testimonial_hover_accent_color.opacity }});
-      }
-    </style>
-  {% end_require_css %}
+{% require_css %}
+<style>
+  #testimonial_{{ name }}:hover {
+    border-color: rgba({{ module.style.testimonial_hover_accent_color.color|convert_rgb }},{{ module.style.testimonial_hover_accent_color.opacity }});
+  }
+</style>
+{% end_require_css %}
 {% endif %}
