--- a/src/modules/Button.module/module.html
+++ b/src/modules/Button.module/module.html
@@ -17,22 +17,24 @@
 </a>
 
 {% if module.style.override_default_style %}
+{% require_css %}
 <style>
   #button_{{ name }} {
-    background-color: rgba({{ module.style.button_bg_color.color|convert_rgb }}, {{ module.style.button_bg_color.opacity }});
-    border-color: rgba({{ module.style.button_border_color.color|convert_rgb }}, {{ module.style.button_border_color.opacity }});
+    background-color: rgba({{ module.style.button_bg_color.color|convert_rgb }}, {{ module.style.button_bg_color.opacity * 0.01 }});
+    border-color: rgba({{ module.style.button_border_color.color|convert_rgb }}, {{ module.style.button_border_color.opacity * 0.01 }});
     border-radius: {{ module.style.button_corner_radius }}px;
     border-width: {{ module.style.button_border_width }}px;
-    color: rgba({{ module.style.button_text_color.color|convert_rgb }},{{ module.style.button_text_color.opacity }});
+    color: rgba({{ module.style.button_text_color.color|convert_rgb }},{{ module.style.button_text_color.opacity * 0.01 }});
     padding-left: {{ module.style.button_horizontal_padding }}px;
     padding-right: {{ module.style.button_horizontal_padding }}px;
     padding-top: {{ module.style.button_vertical_padding }}px;
     padding-bottom: {{ module.style.button_vertical_padding }}px;
   }
   #button_{{ name }}:hover {
-    border-color: rgba({{ module.style.button_border_hover_color .color|convert_rgb }}, {{ module.style.button_border_hover_color .opacity }});
-    background-color: rgba({{ module.style.button_bg_hover_color.color|convert_rgb }}, {{ module.style.button_bg_hover_color.opacity }});
-    color: rgba({{ module.style.button_text_hover_color.color|convert_rgb }}, {{ module.style.button_text_hover_color.opacity }});"
+    border-color: rgba({{ module.style.button_border_hover_color .color|convert_rgb }}, {{ module.style.button_border_hover_color.opacity * 0.01 }});
+    background-color: rgba({{ module.style.button_bg_hover_color.color|convert_rgb }}, {{ module.style.button_bg_hover_color.opacity * 0.01 }});
+    color: rgba({{ module.style.button_text_hover_color.color|convert_rgb }}, {{ module.style.button_text_hover_color.opacity * 0.01 }});"
   }
 </style>
+{% end_require_css %}
 {% endif %}
